# CSQL

./: .gitattributes  Cargo.toml  README.md  about.toml  demo-db.sql  deny.toml  docker-compose.yml  license.html  licenses.html  mysql-connect.sh  oc_product.csv  random.csv  random2.csv
src/: backend.rs  main.rs  ui.rs
src/backend/: backend_manager.rs  csv_handler.rs  database_handler.rs  parser.rs
src/ui/: db_login_window.rs  db_transaction_window.rs  table_window.rs  window_manager.rs
